# shortlist-rm-ingester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
docker/: Dockerfile
rightmove_ingester/: __main__.py  scraping.py
rightmove_ingester/tests/: test_scraping.py
rm_ingester/: __main__.py  adapters.py  data.py  protocols.py  scraping.py  service.py
rm_ingester/tests/: conftest.py  test_scraping.py  test_service.py
rm_ingester/tests/fixtures/: listing-one-page.html  listing-two-page.html  results-page.html
